--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@
 }
 
 
+body {
+    position: relative;
+    height: 100%;
+}
+
 h1 {
     font-size: 96px;
     font-weight: 600;
@@ -455,5 +460,24 @@ footer {
 }
 
 
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
 
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
